[tool.poetry]
name = "rctab"
version = "0.1.0"
description = "An Azure subscription management, reporting, and usage monitoring system."
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sphinx-rtd-theme = {version = "^1.3.0", optional = true}
sphinxcontrib-napoleon = {version = "^0.7", optional = true}
myst-parser = {version = "^2.0.0", optional = true}


[tool.poetry.group.dev.dependencies]

[tool.poetry.extras]
docs = ["sphinx-rtd-theme", "sphinxcontrib-napoleon", "myst-parser"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
